--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="bg-faded">
-  <app-root>Loading...</app-root>
+  <app-root>Loading mofo...</app-root>
 </body>
 </html>
