homepage edit, proof-reading and touch up

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="bg-faded">
-  <app-root>Loading mofo...</app-root>
+  <app-root>
+crunching data and loading resources...
+  </app-root>
 </body>
 </html>
